Crawlers working - API  in working state

--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright (c) Message4U Pty Ltd 2014-2019
-  ~
-  ~ Except as otherwise permitted by the Copyright Act 1967 (Cth) (as amended from time to time) and/or any other
-  ~ applicable copyright legislation, the material may not be reproduced in any format and in any way whatsoever
-  ~ without the prior written consent of the copyright owner.
-  -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -51,6 +43,21 @@
             <version>20.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.9.9</version>
+        </dependency>
+
         <!-- Test Dependencies -->
         <dependency>
             <groupId>com.tngtech.java</groupId>
@@ -83,54 +90,54 @@
             </plugin>
             <!-- Coverage Plugin -->
             <!--<plugin>-->
-                <!--<groupId>org.jacoco</groupId>-->
-                <!--<artifactId>jacoco-maven-plugin</artifactId>-->
-                <!--<version>0.8.4</version>-->
-                <!--<configuration>-->
-                    <!--<excludes>-->
-                        <!--&lt;!&ndash; Exclude Config classes &ndash;&gt;-->
-                        <!--<exclude>**/*Config.*</exclude>-->
-                        <!--&lt;!&ndash; Exclude Utility classes as private constructors are tricky to test &ndash;&gt;-->
-                        <!--<exclude>**/*Utils.*</exclude>-->
-                        <!--&lt;!&ndash; Main class &ndash;&gt;-->
-                        <!--<exclude>**/ZendeskSearchCliApplication.*</exclude>-->
-                    <!--</excludes>-->
-                <!--</configuration>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<id>default-prepare-agent</id>-->
-                        <!--<goals>-->
-                            <!--<goal>prepare-agent</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>default-report</id>-->
-                        <!--<phase>prepare-package</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>report</goal>-->
-                        <!--</goals>-->
-                    <!--</execution>-->
-                    <!--<execution>-->
-                        <!--<id>jacoco-check</id>-->
-                        <!--<goals>-->
-                            <!--<goal>check</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<rules>-->
-                                <!--<rule>-->
-                                    <!--<element>PACKAGE</element>-->
-                                    <!--<limits>-->
-                                        <!--<limit>-->
-                                            <!--<counter>LINE</counter>-->
-                                            <!--<value>COVEREDRATIO</value>-->
-                                            <!--<minimum>${coverage.percentage}</minimum>-->
-                                        <!--</limit>-->
-                                    <!--</limits>-->
-                                <!--</rule>-->
-                            <!--</rules>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+            <!--<groupId>org.jacoco</groupId>-->
+            <!--<artifactId>jacoco-maven-plugin</artifactId>-->
+            <!--<version>0.8.4</version>-->
+            <!--<configuration>-->
+            <!--<excludes>-->
+            <!--&lt;!&ndash; Exclude Config classes &ndash;&gt;-->
+            <!--<exclude>**/*Config.*</exclude>-->
+            <!--&lt;!&ndash; Exclude Utility classes as private constructors are tricky to test &ndash;&gt;-->
+            <!--<exclude>**/*Utils.*</exclude>-->
+            <!--&lt;!&ndash; Main class &ndash;&gt;-->
+            <!--<exclude>**/ZendeskSearchCliApplication.*</exclude>-->
+            <!--</excludes>-->
+            <!--</configuration>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<id>default-prepare-agent</id>-->
+            <!--<goals>-->
+            <!--<goal>prepare-agent</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--<execution>-->
+            <!--<id>default-report</id>-->
+            <!--<phase>prepare-package</phase>-->
+            <!--<goals>-->
+            <!--<goal>report</goal>-->
+            <!--</goals>-->
+            <!--</execution>-->
+            <!--<execution>-->
+            <!--<id>jacoco-check</id>-->
+            <!--<goals>-->
+            <!--<goal>check</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<rules>-->
+            <!--<rule>-->
+            <!--<element>PACKAGE</element>-->
+            <!--<limits>-->
+            <!--<limit>-->
+            <!--<counter>LINE</counter>-->
+            <!--<value>COVEREDRATIO</value>-->
+            <!--<minimum>${coverage.percentage}</minimum>-->
+            <!--</limit>-->
+            <!--</limits>-->
+            <!--</rule>-->
+            <!--</rules>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
             <!--</plugin>-->
         </plugins>
     </build>
