--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,4 +1,4 @@
-FROM badouralix/python-scrapy
+FROM python:3.7
 WORKDIR /code
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
