--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!-- WEB module to create some endponts! -->
+        <!-- WEB module to create some endpoints! -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -57,6 +57,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>2.9.9</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>
+
 
         <!-- Test Dependencies -->
         <dependency>
@@ -88,57 +94,55 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <!-- Coverage Plugin -->
-            <!--<plugin>-->
-            <!--<groupId>org.jacoco</groupId>-->
-            <!--<artifactId>jacoco-maven-plugin</artifactId>-->
-            <!--<version>0.8.4</version>-->
-            <!--<configuration>-->
-            <!--<excludes>-->
-            <!--&lt;!&ndash; Exclude Config classes &ndash;&gt;-->
-            <!--<exclude>**/*Config.*</exclude>-->
-            <!--&lt;!&ndash; Exclude Utility classes as private constructors are tricky to test &ndash;&gt;-->
-            <!--<exclude>**/*Utils.*</exclude>-->
-            <!--&lt;!&ndash; Main class &ndash;&gt;-->
-            <!--<exclude>**/ZendeskSearchCliApplication.*</exclude>-->
-            <!--</excludes>-->
-            <!--</configuration>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>default-prepare-agent</id>-->
-            <!--<goals>-->
-            <!--<goal>prepare-agent</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>default-report</id>-->
-            <!--<phase>prepare-package</phase>-->
-            <!--<goals>-->
-            <!--<goal>report</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--<execution>-->
-            <!--<id>jacoco-check</id>-->
-            <!--<goals>-->
-            <!--<goal>check</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<rules>-->
-            <!--<rule>-->
-            <!--<element>PACKAGE</element>-->
-            <!--<limits>-->
-            <!--<limit>-->
-            <!--<counter>LINE</counter>-->
-            <!--<value>COVEREDRATIO</value>-->
-            <!--<minimum>${coverage.percentage}</minimum>-->
-            <!--</limit>-->
-            <!--</limits>-->
-            <!--</rule>-->
-            <!--</rules>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
+            <!--Coverage Plugin-->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.4</version>
+                <configuration>
+                    <excludes>
+                        <!-- Exclude Config classes -->
+                        <exclude>**/*Config.*</exclude>
+                        <!-- Main class -->
+                        <exclude>**/Application.*</exclude>
+                    </excludes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>default-prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>default-report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>PACKAGE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>${coverage.percentage}</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
